--- a/yaml/hypercloud-operator/_yaml_Install/6.hypercloud4-operator.yaml
+++ b/yaml/hypercloud-operator/_yaml_Install/6.hypercloud4-operator.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: hypercloud4-operator
-        image: 192.168.6.110:5000/hypercloud4-operator:b4.1.0.30
+        image: tmaxcloudck/hypercloud-operator:b4.1.0.33
         imagePullPolicy: Always
         env:
         - name: BackIp
