--- a/yaml/hypercloud-operator/_yaml_Install/8.default-auth-object-init.yaml
+++ b/yaml/hypercloud-operator/_yaml_Install/8.default-auth-object-init.yaml
@@ -66,6 +66,9 @@ rules:
 - apiGroups: ['batch']
   resources: ['*']
   verbs: ['*']
+- apiGroups: ['kubevirt.io']
+  resources: ['*']
+  verbs: ['*']
 - apiGroups: ['extensions']
   resources: ['*']
   verbs: ['*']
@@ -79,6 +82,9 @@ rules:
   resources: ['*']
   verbs: ['*']
 - apiGroups: ['storage.k8s.io']
+  resources: ['*']
+  verbs: ['*']
+- apiGroups: ['cdi.kubevirt.io']
   resources: ['*']
   verbs: ['*']
 - apiGroups: ['tekton.dev']
@@ -125,6 +131,9 @@ rules:
 - apiGroups: ['batch']
   resources: ['*']
   verbs: ['*']
+- apiGroups: ['kubevirt.io']
+  resources: ['*']
+  verbs: ['*']
 - apiGroups: ['extensions']
   resources: ['*']
   verbs: ['*']
@@ -138,6 +147,9 @@ rules:
   resources: ['*']
   verbs: ['*']
 - apiGroups: ['storage.k8s.io']
+  resources: ['*']
+  verbs: ['*']
+- apiGroups: ['cdi.kubevirt.io']
   resources: ['*']
   verbs: ['*']
 - apiGroups: ['tekton.dev']
