--- a/yaml/hypercloud-operator/_yaml_CRD/4.1.0.14/Auth/clusterrole_owner.yaml
+++ b/yaml/hypercloud-operator/_yaml_CRD/4.1.0.14/Auth/clusterrole_owner.yaml
@@ -24,6 +24,9 @@ rules:
 - apiGroups: ['batch']
   resources: ['*']
   verbs: ['*']
+- apiGroups: ['kubevirt.io']
+  resources: ['*']
+  verbs: ['*']
 - apiGroups: ['extensions']
   resources: ['*']
   verbs: ['*']
@@ -37,6 +40,9 @@ rules:
   resources: ['*']
   verbs: ['*']
 - apiGroups: ['storage.k8s.io']
+  resources: ['*']
+  verbs: ['*']
+- apiGroups: ['cdi.kubevirt.io']
   resources: ['*']
   verbs: ['*']
 - apiGroups: ['tekton.dev']
