--- a/yaml/hypercloud-operator/_yaml_Install/audit-policy.yaml
+++ b/yaml/hypercloud-operator/_yaml_Install/audit-policy.yaml
@@ -28,11 +28,13 @@ rules:
     - group: "authentication.istio.io"
     - group: "autoscaling"
     - group: "batch"
+    - group: "cdi.kubevirt.io"
     - group: "ceph.rook.io"
     - group: "cluster.x-k8s.io"
     - group: "config.istio.io"
     - group: "core.kubefed.io"
     - group: "extensions"
+    - group: "kubevirt.io"
     - group: "networking.istio.io"
     - group: "policy"
     - group: "rbac.authorization.k8s.io"
