Add Ck1-3 module's installation, Update install and config

--- a/k8s.config
+++ b/k8s.config
@@ -1,28 +1,57 @@
+#!/bin/bash
+
+# jq / kustomize 
 
 #------------------------------------------------------------------
-# ex : crioVersion={crio version}
-# ex : k8sVersion={kubernetes version}
-# ex : apiServer={kubernetes API server ip}
-# ex : podSubnet={POD_IP_POOL}/{CIDR}
-# ex : calicoVersion={calico plugin version}
-# ex : kubevirtVersion={kubevirt plugin version}
+# ex : HPCD_MODE=multi or single
+# ex : HPCD_SINGLE_OPERATOR_VERSION=5.0.10.0
+# ex : HPCD_MULTI_OPERATOR_VERSION=5.0.10.0
+# ex : HPCD_MULTI_AGENT_VERSION=5.0.10.0
+# ex : HPCD_API_SERVER_VERSION=5.0.10.0
+# ex : HPCD_POSTGRES_VERSION=5.0.0.1
+# ex : HPCD_MULTI_AGENT_VERSION=5.0.10.0
+# ex : REGISTRY=192.168.6.171:5000                               ## do not modify if you don't use private repo
+# ex : INVITATION_TOKEN_EXPIRED_DATE=7days                       ## 1miniutes, 1hours, ...
+# ex : KAFKAX_ADDR=172.22.6.2:31000                              ## do not modify if you want to use kafka in the same cluster using DNS
+
 #------------------------------------------------------------------
-#------------------------------------------------------------------
-# ex : crioVersion=1.17
-# ex : k8sVersion=1.17.6
-# ex : apiServer=172.21.7.2
-# ex : podSubnet=10.244.0.0/16
-# ex : calicoVersion=3.13
-# ex : kubevirtVersion=0.27.0
+# common
+HPCD_MODE=multi
+HPCD_SINGLE_OPERATOR_VERSION=CNCF
+HPCD_MULTI_OPERATOR_VERSION=CNCF
+HPCD_MULTI_AGENT_VERSION=5.0.25.0
+HPCD_API_SERVER_VERSION=5.0.25.1
+HPCD_POSTGRES_VERSION=5.0.0.1
+
+REGISTRY={REGISTRY}
+INVITATION_TOKEN_EXPIRED_DATE=7days
+KAFKA1_ADDR={KAFKA1_ADDR}
+KAFKA2_ADDR={KAFKA2_ADDR}
+KAFKA3_ADDR={KAFKA3_ADDR}
+
+
 #------------------------------------------------------------------
 
-#kubernetes
-crioVersion=1.17
-k8sVersion=1.17.6
-apiServer=172.22.5.2
-podSubnet=10.244.0.0/16
+# ex : POSTGRES_VERSION=9.6.2-alpine
+# ex : HYPERAUTH_SERVER_VERSION=latest
+# ex : KAFKA_VERSION=2.12-2.0.1
+# ex : ZOOKEEPER_VERSION=3.4.6
+# ex : HYPERAUTH_LOG_COLLECTOR_VERSION=b0.0.0.14
+# ex : MAIN_MASTER_IP=192.168.6.171
+# ex : MASTER_NODE_ROOT_PASSWORD=tmax@23
+# ex : MASTER_NODE_ROOT_USER=root
+# ex : REGISTRY=192.168.6.171:5000
 
-#plugin
-#If nothing is specified, the default version is installed.
-calicoVersion=
-kubevirtVersion=
+#------------------------------------------------------------------
+
+# common
+POSTGRES_VERSION={POSTGRES_VERSION}
+HYPERAUTH_SERVER_VERSION={HYPERAUTH_SERVER_VERSION}
+KAFKA_VERSION={KAFKA_VERSION}
+ZOOKEEPER_VERSION={ZOOKEEPER_VERSION}
+HYPERAUTH_LOG_COLLECTOR_VERSION={HYPERAUTH_LOG_COLLECTOR_VERSION}
+
+MAIN_MASTER_IP={MAIN_MASTER_IP}
+MASTER_NODE_ROOT_PASSWORD={MASTER_NODE_ROOT_PASSWORD}
+MASTER_NODE_ROOT_USER={MASTER_NODE_ROOT_USER}
+REGISTRY={REGISTRY}
