default 버전 변경, dnspolicy 삭제, admissionReviewVersion 명시

--- a/k8s.config
+++ b/k8s.config
@@ -44,7 +44,7 @@ kubevirtVersion=
 
 #------------------------------------------------------------------
 # common
-HPCD_MODE=multi
+HPCD_MODE=single
 HPCD_SINGLE_OPERATOR_VERSION=CNCF
 HPCD_MULTI_OPERATOR_VERSION=CNCF
 HPCD_MULTI_AGENT_VERSION=5.0.25.0
