hyperauth shell 추가

--- a/k8s.config
+++ b/k8s.config
@@ -73,11 +73,8 @@ KAFKA3_ADDR={KAFKA3_ADDR}
 #------------------------------------------------------------------
 
 # common
-POSTGRES_VERSION={POSTGRES_VERSION}
-HYPERAUTH_SERVER_VERSION={HYPERAUTH_SERVER_VERSION}
-KAFKA_VERSION={KAFKA_VERSION}
-ZOOKEEPER_VERSION={ZOOKEEPER_VERSION}
-HYPERAUTH_LOG_COLLECTOR_VERSION={HYPERAUTH_LOG_COLLECTOR_VERSION}
+POSTGRES_VERSION=9.6.2-alpine
+HYPERAUTH_VERSION=latest
 
 MAIN_MASTER_IP={MAIN_MASTER_IP}
 MASTER_NODE_ROOT_PASSWORD={MASTER_NODE_ROOT_PASSWORD}
