[feat] add hyperauth ip

--- a/yaml/console/console.config
+++ b/yaml/console/console.config
@@ -9,13 +9,13 @@ OPERATOR_VER="5.1.0.1"
 ## HyperAuth 
 # hyperauth(keycloak)에서 설정한 REALM정보 입력 
 # 예시) REALM="tmax"
-REALM=''
+REALM='tmax'
 #hyperauth ip 주소 혹은 도메인 주소 입력 (같은 클러스터 내에 존재한다면, kubectl get svc -n hyperauth hyperauth로 조회가능) 
 # 예시) KEYCLOAK="hyperauth.org"
-KEYCLOAK=''
+KEYCLOAK='{HYPERAUTH_IP}'
 # hyperauth(keycloak)에서 설정하 Client Id 정보 입력 
 # 예시) CLIENTID="hypercloud5"
-CLIENTID=''
+CLIENTID='hypercloud5'
 
 ## Console configs
 # Multi Cluster 모드로 설치하려는 경우 true 입력 (Single Cluster 모드이 경우 false)
