--- a/yaml/console/yaml/4.svc-lb.yaml
+++ b/yaml/console/yaml/4.svc-lb.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: console
+  name: console-np
   namespace: console-system
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
-    - name: "https"
-      port: 443
-      targetPort: 443
-    - name: "http"
-      port: 80
-      targetPort: 80
+  - name: "https"
+    port: 443
+    targetPort: 443
+  - name: "http"
+    port: 80 
+    targetPort: 80  
   selector:
-    app: console
+    app: console   
     hypercloud: ui
