[mod] 인증서 적용 방식 변경

--- a/k8s.config
+++ b/k8s.config
@@ -38,6 +38,7 @@ calicoVersion=
 # ex : HPCD_MULTI_AGENT_VERSION=5.0.10.0
 # ex : REGISTRY=192.168.6.171:5000                               ## do not modify if you don't use private repo
 # ex : INVITATION_TOKEN_EXPIRED_DATE=7days                       ## 1miniutes, 1hours, ...
+# ex : KAFKA_ENABLED=true
 # ex : KAFKAX_ADDR=172.22.6.2:31000                              ## do not modify if you want to use kafka in the same cluster using DNS
 
 #------------------------------------------------------------------
@@ -46,11 +47,12 @@ HPCD_MODE=single
 HPCD_SINGLE_OPERATOR_VERSION=CNCF
 HPCD_MULTI_OPERATOR_VERSION=CNCF
 HPCD_MULTI_AGENT_VERSION=5.0.25.0
-HPCD_API_SERVER_VERSION=5.0.25.1
+HPCD_API_SERVER_VERSION=5.0.26.0
 HPCD_POSTGRES_VERSION=5.0.0.1
 
 REGISTRY={REGISTRY}
 INVITATION_TOKEN_EXPIRED_DATE=7days
+KAFKA_ENABLED=false
 KAFKA1_ADDR={KAFKA1_ADDR}
 KAFKA2_ADDR={KAFKA2_ADDR}
 KAFKA3_ADDR={KAFKA3_ADDR}
