--- a/yaml/hyperauth/1.initialization.yaml
+++ b/yaml/hyperauth/1.initialization.yaml
@@ -185,6 +185,7 @@ data:
         {
           "username": "hc-admin@tmax.co.kr",
           "enabled": true,
+          "emailVerified": true,
           "email": "hc-admin@tmax.co.kr",
           "credentials": [
             {
