--- a/yaml/hyperauth/1.initialization.yaml
+++ b/yaml/hyperauth/1.initialization.yaml
@@ -119,7 +119,7 @@ spec:
         tier: postgreSQL
     spec:
       containers:
-        - image: postgres:POSTGRES_VERSION  #9.6.2-alpine
+        - image: postgres:9.6.2-alpine
           name: postgresql
           env:
             - name: POSTGRES_USER
