[mod] remove unnecessary variables and script

--- a/yaml/hypercloud-api-server/02_postgres-create.yaml
+++ b/yaml/hypercloud-api-server/02_postgres-create.yaml
@@ -117,7 +117,7 @@ data:
     CREATE TABLE CLUSTER_MEMBER (ID SERIAL, NAMESPACE VARCHAR(255) NOT NULL, CLUSTER VARCHAR(255) NOT NULL, MEMBER_ID VARCHAR(255) NOT NULL, MEMBER_NAME VARCHAR(255), ATTRIBUTE VARCHAR(255), ROLE VARCHAR(255), STATUS VARCHAR(255), CREATEDTIME TIMESTAMP NOT NULL DEFAULT NOW(), UPDATEDTIME TIMESTAMP NOT NULL DEFAULT NOW());
     ALTER TABLE CLUSTER_MEMBER ADD CONSTRAINT MEMBER_CONSTRAINT UNIQUE (NAMESPACE, CLUSTER, MEMBER_ID, ATTRIBUTE);
     CREATE UNIQUE INDEX CLUSTER_STATUS ON CLUSTER_MEMBER (NAMESPACE, CLUSTER, STATUS) WHERE ( STATUS = 'owner');
-    SELECT cron.schedule('* * * * *', $$DELETE FROM CLUSTER_MEMBER WHERE STATUS = 'pending' AND CREATEDTIME < now() - interval '{INVITATION_TOKEN_EXPIRED_DATE}'$$);
+    SELECT cron.schedule('* * * * *', $$DELETE FROM CLUSTER_MEMBER WHERE STATUS = 'pending' AND CREATEDTIME < now() - interval '7days'$$);
     CREATE OR REPLACE FUNCTION UPDATE_TIME() RETURNS TRIGGER AS $$ BEGIN NEW.updatedtime = NOW(); RETURN NEW; END; $$ LANGUAGE plpgsql;
     CREATE TRIGGER TRIGGER_UPDATE_TIME AFTER UPDATE ON CLUSTER_MEMBER FOR EACH ROW EXECUTE PROCEDURE UPDATE_TIME();
     ALTER DATABASE postgres set idle_in_transaction_session_timeout = '3min';
