[feat] hypercloud5-api-server kube 1.25 버전 설치

--- a/k8s.config
+++ b/k8s.config
@@ -29,22 +29,26 @@ podSubnet=10.244.0.0/16
 calicoVersion=
 
 #------------------------------------------------------------------
-# ex : HPCD_MODE=multi or single
-# ex : HPCD_SINGLE_OPERATOR_VERSION=5.0.10.0
-# ex : HPCD_MULTI_OPERATOR_VERSION=5.0.10.0
-# ex : HPCD_MULTI_AGENT_VERSION=5.0.10.0
+# ex : HPCD_MODE=single
 # ex : HPCD_API_SERVER_VERSION=5.0.10.0
-# ex : HPCD_POSTGRES_VERSION=5.0.0.1
-# ex : HPCD_MULTI_AGENT_VERSION=5.0.10.0
+# ex : HPCD_TIMESCALEDB_VERSION=5.0.0.1
+# ex : KAFKA_ENABLED=false
+# ex : API_SERVER_LOG_LEVEL=INFO                                 ## TRACE, DEBUG, INFO, WARN, ERROR, FATAL
+# ex : TIMESCALEDB_LOG_LEVEL=INFO                                ## DEBUG5, ..., DEBUG1, INFO, NOTICE, WARNING, ERROR, LOG, FATAL, PANIC
+
+# ex : CUSTOM_DOMAIN=tmaxcloud.org                               ## domain for hypercloud
+# ex : CONSOLE_SUBDOMAIN=tmaxcloud-console                       ## subdomain for hypercloud console
+
 # ex : REGISTRY=192.168.6.171:5000                               ## do not modify if you don't use private repo
 
 #------------------------------------------------------------------
 # common
-HPCD_SINGLE_OPERATOR_VERSION=CNCF
-#HPCD_MULTI_OPERATOR_VERSION=CNCF
-#HPCD_MULTI_AGENT_VERSION=5.0.25.0
-HPCD_API_SERVER_VERSION=5.0.26.0
-HPCD_POSTGRES_VERSION=5.0.0.1
+HPCD_MODE=single
+HPCD_API_SERVER_VERSION=5.0.34.1
+HPCD_TIMESCALEDB_VERSION=5.0.0.0
+KAFKA_ENABLED=false
+API_SERVER_LOG_LEVEL=INFO
+TIMESCALEDB_LOG_LEVEL=WARNING
 
 REGISTRY={REGISTRY}
 
