--- a/yaml/console/yaml/4.svc-lb.yaml
+++ b/yaml/console/yaml/4.svc-lb.yaml
@@ -8,10 +8,12 @@ spec:
   ports:
   - name: "https"
     port: 443
-    targetPort: 443
+    targetPort: 8443
+    nodePort: 31443
   - name: "http"
     port: 80 
-    targetPort: 80  
+    targetPort: 8080
+    nodePort: 31080
   selector:
     app: console   
     hypercloud: ui
