--- a/yaml/console/yaml/5.deploy.yaml
+++ b/yaml/console/yaml/5.deploy.yaml
@@ -19,29 +19,24 @@ spec:
       containers:
         - command:
             - /opt/bridge/bin/console
-            - gateway
+            - server
             - --public-dir=/opt/bridge/static
-            - --listen=https://0.0.0.0:443
-            - --base-address=https://0.0.0.0:443
-            - --redirect-port=80
-            - --tls-cert-file=/var/https-cert/cert
-            - --tls-key-file=/var/https-cert/key
-            - --keycloak-realm=@@REALM@@
-            - --keycloak-auth-url=https://@@KEYCLOAK@@/auth
-            - --keycloak-client-id=@@CLIENTID@@
-            - --mc-mode=@@MC_MODE@@
-            - --kiali-endpoint=https://@@KIALI@@/api/kiali/
-            - --kibana-endpoint=http://@@KIBANA@@/api/kibana/
-            - --kubeflow-endpoint=http://@@KUBEFLOW@@/api/kubeflow/
-            - --managed-gitlab-url=@@GITLAB@@
-            - --registry-url=@@HYPERREGISTRY@@
+            - --servingInfo.listen=https://0.0.0.0:8443
+            - --servingInfo.baseAddress=https://0.0.0.0:8443
+            - --servingInfo.redirectPort=8080
+            - --servingInfo.certFile=/var/https-cert/cert
+            - --servingInfo.keyFile=/var/https-cert/key
+            - --app.keycloakRealm=@@REALM@@
+            - --app.keycloakAuthUrl=https://@@KEYCLOAK@@/auth
+            - --app.keycloakClientId=@@CLIENTID@@
+            - --app.mcMode=@@MC_MODE@@
           image: tmaxcloudck/hypercloud-console:@@CONSOLE_VER@@
           imagePullPolicy: Always
           name: console
           ports:
-            - containerPort: 443
+            - containerPort: 8443
               protocol: TCP
-            - containerPort: 80
+            - containerPort: 8080
               protocol: TCP
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
@@ -56,15 +51,6 @@ spec:
               name: timezone
               readOnly: true
             - mountPath: /opt/bridge/configs
-              name: dynamic-config
-        - command:
-            - /manager
-          args:
-            - --pwd=/var/tmp/configs/
-          image: tmaxcloudck/console-operator:@@OPERATOR_VER@@
-          name: manager
-          volumeMounts:
-            - mountPath: /var/tmp/configs
               name: dynamic-config
       serviceAccount: console-system-admin
       volumes:
