--- a/yaml/console/yaml/4.svc.yaml
+++ b/yaml/console/yaml/4.svc.yaml
@@ -1,19 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: console-np
+  name: console
   namespace: console-system
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-  - name: "https"
-    port: 443
-    targetPort: 8443
-    nodePort: 31443
   - name: "http"
     port: 80 
     targetPort: 8080
-    nodePort: 31080
   selector:
     app: console   
     hypercloud: ui
