--- a/yaml/console/yaml/2.init.yaml
+++ b/yaml/console/yaml/2.init.yaml
@@ -2,3 +2,55 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: console-system
+
+---
+
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: console-system-admin
+  namespace: console-system
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: console-system-admin
+  namespace: console-system
+rules:
+  - apiGroups:
+      - ""
+    resources:
+      - services
+      - endpoints
+      - secrets
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - extensions
+      - networking.k8s.io
+    resources:
+      - ingresses
+      - ingressclasses
+    verbs:
+      - get
+      - list
+      - watch
+
+---
+
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: console-system-admin
+subjects:
+  - kind: ServiceAccount
+    name: console-system-admin
+    namespace: console-system
+roleRef:
+  kind: ClusterRole
+  name: console-system-admin
+  apiGroup: rbac.authorization.k8s.io
