[feat] update to kubernetes v1.29.0

--- a/k8s.config
+++ b/k8s.config
@@ -3,7 +3,7 @@
 # jq / kustomize 
 
 #------------------------------------------------------------------
-# ex : crioVersion={crio version}
+# ex : cniVersion={cni version}
 # ex : k8sVersion={kubernetes version}
 # ex : apiServer={kubernetes API server ip}
 # ex : podSubnet={POD_IP_POOL}/{CIDR}
@@ -11,16 +11,16 @@
 # ex : kubevirtVersion={kubevirt plugin version}
 #------------------------------------------------------------------
 #------------------------------------------------------------------
-# ex : crioVersion=1.25
-# ex : k8sVersion=1.25.0
+# ex : crioVersion=1.4.0
+# ex : k8sVersion=1.29.0
 # ex : apiServer=172.21.7.121
 # ex : podSubnet=10.244.0.0/16
-# ex : calicoVersion=3.24.1
+# ex : calicoVersion=3.27.0
 #------------------------------------------------------------------
 
 #kubernetes
-crioVersion=1.25
-k8sVersion=1.25.0
+cniVersion=1.4.0
+k8sVersion=1.29.0
 apiServer=172.22.7.121
 podSubnet=10.244.0.0/16
 
