--- a/yaml/kubeadm-config.yaml
+++ b/yaml/kubeadm-config.yaml
@@ -4,7 +4,7 @@ localAPIEndpoint:
   advertiseAddress: {apiServer}
   bindPort: 6443
 nodeRegistration:
-  criSocket: unix:///var/run/crio/crio.sock
+  criSocket: unix:///var/run/containerd/containerd.sock
 ---
 apiVersion: kubeadm.k8s.io/v1beta3
 kind: ClusterConfiguration
